[package]
name = "rebalancer"
version = "0.1.0"
description = "DeFi Portfolio Rebalancer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rebalancer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
uint = "0.10.0"

